objects/VisitOps__Topic__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__AVRequirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AV Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Auto_Create_Expertise_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to automatically create an Expertise area for this topic. Leave the Expertise Area Lookup blank if using this checkbox.</inlineHelpText>
        <label>Auto Create Expertise Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__CushionTimeInRoomAfterMinutes__c</fullName>
        <label>Cushion time in room after</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__CushionTimeInRoomBefore__c</fullName>
        <label>Cushion time in room before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expertise_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expertise Area</label>
        <referenceTo>VisitOps__Expertise_Area__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation with customers</fullName>
                </value>
                <value>
                    <fullName>Hands-on Training</fullName>
                </value>
                <value>
                    <fullName>Panel with customers</fullName>
                </value>
                <value>
                    <fullName>Demo with customers</fullName>
                </value>
                <value>
                    <fullName>Customer Pensl and Demo</fullName>
                </value>
                <value>
                    <fullName>Partner Session</fullName>
                </value>
                <value>
                    <fullName>Telepresence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__RoomRequirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Room Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__TopicCategory__c</fullName>
        <label>Topic Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instructions</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Consumer Healthcare</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Visit Team Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__TopicLevel__c</fullName>
        <label>Topic Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Deep Dive</fullName>
                </value>
                <value>
                    <fullName>Expert Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__TopicNameOnAgenda__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Name on Agenda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__TopicName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Up to 80 Characters are permitted for Topic Name.</inlineHelpText>
        <label>Topic Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Topic_Active_Inactive__c</fullName>
        <description>This field is used to designate if Topic is active or inactive.  Only Active topics are searchable on Agenda Session records.</description>
        <label>Topic Active/Inactive</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Topic_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Topic Category</label>
        <referenceTo>VisitOps__Topic_Category__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__TopicName__c</columns>
        <columns>VisitOps__TopicNameOnAgenda__c</columns>
        <columns>VisitOps__Expertise_Area__c</columns>
        <columns>VisitOps__Topic_Category__c</columns>
        <columns>VisitOps__Topic_Active_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T{0000}</displayFormat>
        <label>Topic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__CheckAutoExpertiseArea</fullName>
        <active>true</active>
        <errorConditionFormula>IF(PRIORVALUE( VisitOps__Auto_Create_Expertise_Area__c)==false&amp;&amp; VisitOps__Auto_Create_Expertise_Area__c==true, true, false)</errorConditionFormula>
        <errorDisplayField>VisitOps__Auto_Create_Expertise_Area__c</errorDisplayField>
        <errorMessage>Cannot change the value to checked if the record was created with the box unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisitOps__UncheckAutoCreateExpertiseArea</fullName>
        <active>true</active>
        <errorConditionFormula>IF(PRIORVALUE( VisitOps__Auto_Create_Expertise_Area__c)==true &amp;&amp; VisitOps__Auto_Create_Expertise_Area__c==false, true, false)</errorConditionFormula>
        <errorDisplayField>VisitOps__Auto_Create_Expertise_Area__c</errorDisplayField>
        <errorMessage>Cannot change the value to unchecked if the record was created using the checkbox.</errorMessage>
    </validationRules>
</CustomObject>